@@ -3,29 +3,32 @@ package fr.gouv.monprojetsup.suggestions.algo;
 import fr.gouv.monprojetsup.data.Constants;
 import fr.gouv.monprojetsup.data.model.LatLng;
 import fr.gouv.monprojetsup.data.model.Ville;
-import fr.gouv.monprojetsup.data.model.stats.Middle50;
 import fr.gouv.monprojetsup.suggestions.data.SuggestionsData;
 import fr.gouv.monprojetsup.suggestions.data.model.Edges;
 import fr.gouv.monprojetsup.suggestions.data.model.Path;
-import fr.gouv.monprojetsup.suggestions.dto.GetExplanationsAndExamplesServiceDTO;
+import fr.gouv.monprojetsup.suggestions.dto.ChoiceDTO;
+import fr.gouv.monprojetsup.suggestions.dto.GetAffinitiesServiceDTO.Affinity;
+import fr.gouv.monprojetsup.suggestions.dto.GetExplanationsAndExamplesServiceDTO.ExplanationAndExamples;
 import fr.gouv.monprojetsup.suggestions.dto.ProfileDTO;
-import fr.gouv.monprojetsup.suggestions.dto.SuggestionDTO;
+import fr.gouv.monprojetsup.suggestions.port.ParametresPort;
 import jakarta.annotation.PostConstruct;
 import lombok.Getter;
+import lombok.Setter;
 import lombok.val;
 import org.apache.commons.lang3.tuple.Pair;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -35,8 +38,10 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 import static fr.gouv.monprojetsup.data.Constants.isFiliere;
+import static fr.gouv.monprojetsup.suggestions.Constants.LAS_FL_COD;
 import static fr.gouv.monprojetsup.suggestions.Constants.PASS_FL_COD;
 import static fr.gouv.monprojetsup.suggestions.Constants.gFlCodToFrontId;
+import static fr.gouv.monprojetsup.suggestions.algo.Config.BONUS_NAIVE_BAYES;
 import static fr.gouv.monprojetsup.suggestions.algo.Config.NO_MATCH_SCORE;
 
 @Component
@@ -45,15 +50,23 @@ public class AlgoSuggestions {
     public static final Logger LOGGER = Logger.getLogger(AlgoSuggestions.class.getName());
 
     @Autowired
-    public AlgoSuggestions(SuggestionsData data) {
+    public AlgoSuggestions(
+            SuggestionsData data,
+            ParametresPort parametresPort
+    ) {
         this.data = data;
-        this.las = data.getLASFormations();
+        this.parametresPort = parametresPort;
         p50NbFormations = data.p50NbFormations();
         p75Capacity = data.p75Capacity();
+        debugLabels.putAll(data.getDebugLabels());
     }
 
     /** all accesses to data after init are cached for perf reasons */
     private final SuggestionsData data;
+
+    private final ParametresPort parametresPort;
+    private static final long REFRESH_REF_DATA_DELAY_MS = 60000;
+
 
     /**
      * Données en cache utilisées par le service, précalculées au démarrage
@@ -63,12 +76,13 @@ public class AlgoSuggestions {
     @Getter
     private final Edges edgesKeys = new Edges();
 
+    @Setter
+    private boolean generateDetailedExplanations;
+
     /* map les flcod vers les frcod */
     private @NotNull Map<String, @NotNull String> typesFormations = new HashMap<>();
     /* les formations en apprentissage */
     private Set<String> apprentissage;
-    /* les formations qui sont des LAS, elles sont systématiquement supprimées des suggestions su run profil qui n'a pas coché un intérêt "santé" */
-    protected Set<String> las;
     /* la médiane du nombre d'action de formation dans une formation, permet de définir beaucoup d'offre ou peu d'offre */
     public final int p50NbFormations;
     /* le 75 percentiel de la capacité d'accueil globale d'une formation, permet de définir gros ou petit */
@@ -87,7 +101,9 @@ public class AlgoSuggestions {
      * Précalcul des données en cache avant démarrage du service
      */
     @PostConstruct
-    void initialize() {
+    synchronized void initialize() {
+
+        clearCaches();
 
         createGraph();
 
@@ -99,30 +115,46 @@ public class AlgoSuggestions {
                 .getSuccessors(gFlCodToFrontId(PASS_FL_COD))
                 .keySet());
         relatedToHealth.add(gFlCodToFrontId(PASS_FL_COD));
-        relatedToHealth.addAll(data.getLASFormations());
+        relatedToHealth.add(gFlCodToFrontId(LAS_FL_COD));
     }
+
+    private void clearCaches() {
+        edgesKeys.clear();
+        pathes.clear();
+        villes.clear();
+        formationsSimilaires.clear();
+        nbVoeux.clear();
+        capacites.clear();
+        nbAdmis.clear();
+        voeuxCoords.clear();
+        durees.clear();
+        debugLabels.clear();
+        statsSpecialites.clear();
+        candidatsMetiers.clear();
+        formationIds.clear();
+    }
+
+    @Scheduled(fixedDelay = REFRESH_REF_DATA_DELAY_MS) // Every second
+    synchronized private void refreshRefData() {
+        synchronized (this) {
+            // Fetch the latest config from a database, external service, or file
+            val isRefDataUpdateNeeded = parametresPort.isRefDataUpdateNeeded();
+            if (isRefDataUpdateNeeded) {
+                initialize();
+                parametresPort.setRefDataUpdateNotNeeded();
+            }
+        }
+    }
+
 
     /**
      * Création du graphe global
      */
-    public void createGraph() {
+    synchronized public void createGraph() {
         LOGGER.info("Creating global graph");
         edgesKeys.clear();
 
         getFormationIds().forEach(edgesKeys::addNode);
-
-        // intégration des relations étendues aux graphes
-        Map<String, Set<String>> metiersVersFormations = data.getMetiersVersFormations();
-        val metiersPass = data.getMetiersPass();
-        val lasCorr = data.getLASFormations();
-
-        metiersVersFormations.forEach((metier, strings) -> strings.forEach(fil -> {
-            if(lasCorr.contains(fil) && metiersPass.contains(metier)) {
-                edgesKeys.put(metier, fil, true, Config.LASS_TO_PASS_INHERITANCE_PENALTY);
-            } else {
-                edgesKeys.put(metier, fil, true, 1.0);
-            }
-        }));
 
         data.edgesFormationsPsupDomaines().forEach(edge -> {
             val formation = edge.src();
@@ -130,12 +162,14 @@ public class AlgoSuggestions {
             edgesKeys.put(formation, domaine, false, Config.EDGES_FORMATIONS_DOMAINES_WEIGHT);
             edgesKeys.put(domaine, formation, false, Config.EDGES_DOMAINES_FORMATIONS_WEIGHT);
         });
+
         data.edgesMetiersFormationsPsup().forEach(edge -> {
             val metier = edge.src();
             val formation = edge.dst();
             edgesKeys.put(metier, formation, false, Config.EDGES_METIERS_FORMATIONS_WEIGHT);
             edgesKeys.put(formation, metier, false, Config.EDGES_FORMATIONS_METIERS_WEIGHT);
         });
+
         edgesKeys.putAll(data.edgesDomainesMetiers(), true, Config.EDGES_DOMAINES_METIERS_WEIGHT);
         edgesKeys.putAll(data.edgesInteretsMetiers(), false, Config.EDGES_INTERETS_METIERS_WEIGHT); //faible poids
         edgesKeys.putAll(data.edgesMetiersAssocies(), true, Config.EDGES_METIERS_ASSOCIES_WEIGHT);
@@ -149,10 +183,6 @@ public class AlgoSuggestions {
         val edgesFilieresGroupes = data.edgesFormationPsupFormationMps();
         //edgesKeys.putAll(edgesFilieresGroupes);
         edgesKeys.replaceSpecificByGeneric(edgesFilieresGroupes, 1.0);
-
-        //LAS inheritance, both from their mother licence and from PASS
-        edgesKeys.inheritEdgesFromRicherItem(data.lasToGeneric(), 1.0);
-        edgesKeys.inheritEdgesFromRicherItem(data.lasToPass(), Config.LASS_TO_PASS_INHERITANCE_PENALTY);
 
         //suppression des formations hors référentiel MPS
         Set<String> mpsFormationsIds = new HashSet<>(getFormationIds());
@@ -173,6 +203,8 @@ public class AlgoSuggestions {
         before.removeAll(after);
         LOGGER.info("Total nb of edges+ " + edgesKeys.size());
 
+        data.saveAlgoEdges(edgesKeys.edges());
+
 
     }
 
@@ -180,48 +212,45 @@ public class AlgoSuggestions {
     /**
      * Get affinities associated to a profile.
      *
-     * @param pf            the profile
-     * @param cfg           the config
-     * @param inclureScores if true, the scores are included in the result
+     * @param pf                  the profile
+     * @param cfg                 the config
+     * @param inclureScores       if true, the scores are included in the result
+     * @param affinitesNaiveBayes the naive bayes affinities
      * @return the affinities
      */
-    public @NotNull List<Pair<String, Affinite>> getFormationsAffinities(
+    synchronized public @NotNull List<Pair<String, Affinite>> getFormationsAffinities(
             @NotNull ProfileDTO pf,
             @NotNull Config cfg,
-            boolean inclureScores
-    ) {
+            boolean inclureScores,
+            @NotNull List<Affinity> affinitesNaiveBayes) {
         counter.getAndIncrement();
-        //rien de spécifique --> on ne suggère rien pour éviter les trucs généralistes
         if (containsNothingPersonal(pf)) {
-            LOGGER.info(Config.NOTHING_PERSONAL);
-            return List.of();
+            return getFormationIds().stream().map(fl -> Pair.of(fl, Affinite.getNoMatch())).toList();
         }
         //computing interests of all alive filieres
-        AffinityEvaluator affinityEvaluator = new AffinityEvaluator(pf, cfg, this, true);
+        AffinityEvaluator affinityEvaluator = new AffinityEvaluator(pf, cfg, this, true, generateDetailedExplanations);
+
+        val affinitesNaiveBayesParCle = affinitesNaiveBayes.stream().collect(Collectors.toMap(Affinity::key, Affinity::affinite));
 
         Map<String, Affinite> affinites =
                 getFormationIds().stream()
                         .collect(Collectors.toMap(
                                 fl -> fl,
-                                fl -> affinityEvaluator.getAffinityEvaluation(fl, inclureScores)
+                                fl -> affinityEvaluator.getAffinityEvaluation(
+                                        fl,
+                                        inclureScores,
+                                        affinitesNaiveBayesParCle.containsKey(fl)
+                                                ? Map.of(BONUS_NAIVE_BAYES, new DataSuggestions2(affinitesNaiveBayesParCle.get(fl), null) )
+                                                : Map.of()
+                                )
                         ));
 
-        //computing maximal score for etalonnage
+        //scaling scores with respect to maximal score
         double maxScore = affinites.values().stream().mapToDouble(Affinite::affinite).max().orElse(1.0);
-
         if (maxScore <= NO_MATCH_SCORE) maxScore = 1.0;
-
-        pf.suggRejected().forEach(suggestionDTO -> {
-            String fl = suggestionDTO.fl();
-            if (affinites.containsKey(fl)) {
-                affinites.put(fl, Affinite.getNoMatch());
-            }
-        });
-
-
-        //rounding to 6 digits
         double finalMaxScore = maxScore;
-        affinites.entrySet().forEach(e -> e.setValue(Affinite.round(e.getValue(), finalMaxScore)));
+        affinites.entrySet().forEach(e -> e.setValue(Affinite.scale(e.getValue(), finalMaxScore)));
+
         return affinites.entrySet().stream()
                 .map(Pair::of)
                 .toList();
@@ -235,13 +264,16 @@ public class AlgoSuggestions {
      * @param pf  the profile
      * @return the suggestions, each indexed with a score
      */
-    public @NotNull List<Pair<String, @NotNull Map<String, @NotNull Double>>> getFormationsSuggestions(
+    synchronized public @NotNull List<Pair<String, @NotNull Map<String, @NotNull Double>>> getFormationsSuggestions(
             @NotNull ProfileDTO pf,
-            boolean inclureScores) {
+            boolean inclureScores,
+            @NotNull List<Affinity> affinitesNaiveBayes) {
 
-        LinkedList<Pair<String, Affinite> > affinities = new LinkedList<>(
-                getFormationsAffinities(pf, data.getConfig(), inclureScores)
+
+        List<Pair<String, Affinite> > affinities = new ArrayList<>(
+                getFormationsAffinities(pf, data.getConfig(), inclureScores, affinitesNaiveBayes)
         );
+        Collections.shuffle(affinities);
         affinities.sort(Comparator.comparingDouble(p -> -p.getRight().affinite()));
 
         Map<Affinite.SuggestionQuota, Double> totals = new EnumMap<>(Affinite.SuggestionQuota.class);
@@ -249,6 +281,7 @@ public class AlgoSuggestions {
         @NotNull List<Pair<String, @NotNull Map<String, @NotNull Double>>> result = new ArrayList<>();
 
         val config = data.getConfig();
+        val diversityMultiplicativeMalus = config.getDiversityMultiplicativeMalusBac(pf.bac());
 
         while(!affinities.isEmpty()) {
             int nb = result.size() + 1;
@@ -275,23 +308,23 @@ public class AlgoSuggestions {
             //on sélectionne les 10 prochains candidats
             val shortListStream = candidates.stream()
                     .filter(a -> nbQuotasSatisfied.getOrDefault(a.getLeft(), 0) >= maxNbQuotasSatisfied)
-                    .limit(config.DiversityShortListLength)
+                    .limit(config.diversityShortListLength)
                     ;
 
             //on calcule la fréquence d'occurence de chaque type de formation dans les 10 derniers résultats
             val typeFormationsCounters =
-                    result.stream().skip(Math.max(0, result.size() - config.DiversityShortListLength))
+                    result.stream().skip(Math.max(0, result.size() - config.diversityShortListLength))
                             .map(Pair::getLeft)
                             .collect(Collectors.groupingBy(typesFormations::get, Collectors.counting()));
 
-            //on trie les 10 prochains candidats en fonction de leur afffinité,
+            //on trie les 10 prochains candidats en fonction de leur affinité,
             //avec un malus multiplicatif pour celles qui sont déjà beaucoup apparues lors des 10 derniers résultats
             val shortListSortedStream = shortListStream
                     .sorted(Comparator.comparingDouble(
                             a -> {
                                 val typeFormation = typesFormations.getOrDefault(a.getLeft(),"");
                                 val nbOccurences = typeFormationsCounters.getOrDefault(typeFormation, 0L);
-                                val diversityMalus = Math.pow(config.diversityMultiplicativeMalus, nbOccurences);
+                                val diversityMalus = Math.pow(diversityMultiplicativeMalus, nbOccurences);
                                 val affiniteIncluantMalus = diversityMalus * a.getRight().affinite();
                                 return - affiniteIncluantMalus;
                             }
@@ -301,7 +334,7 @@ public class AlgoSuggestions {
 
             if (choice == null) {
                 //can happen when all scoresDiversiteResultats are zero
-                choice = affinities.getFirst();
+                choice = affinities.get(0);
             }
 
             result.add(
@@ -327,11 +360,10 @@ public class AlgoSuggestions {
      * @param cles the keys
      * @return the sorted metiers. Best first in the list, then second best and so on...
      */
-    public List<String> sortMetiersByAffinites(@NotNull ProfileDTO pf, @Nullable Collection<String> cles) {
+    synchronized public List<String> sortMetiersByAffinites(@NotNull ProfileDTO pf, @Nullable Collection<String> cles) {
         counter.getAndIncrement();
         //rien de spécifique --> on ne suggère rien pour éviter les trucs généralistes
         if(containsNothingPersonal(pf)) {
-            LOGGER.info(Config.NOTHING_PERSONAL);
             return List.of();
         }
 
@@ -342,9 +374,9 @@ public class AlgoSuggestions {
         } else {
             clesFiltrees = new HashSet<>(edgesKeys.nodes().stream().filter(Constants::isMetier).toList());
         }
-        pf.suggRejected().stream().map(SuggestionDTO::fl).toList().forEach(clesFiltrees::remove);
+        pf.suggRejected().stream().map(ChoiceDTO::id).toList().forEach(clesFiltrees::remove);
 
-        return  new AffinityEvaluator(pf, data.getConfig(), this, false).getCandidatesOrderedByPertinence(clesFiltrees);
+        return  new AffinityEvaluator(pf, data.getConfig(), this, false, generateDetailedExplanations).getCandidatesOrderedByPertinence(clesFiltrees);
     }
 
 
@@ -358,16 +390,22 @@ public class AlgoSuggestions {
      * @param keys     the keys of the formations
      * @return the explanations and examples associated to the node
      */
-    public List<GetExplanationsAndExamplesServiceDTO.ExplanationAndExamples> getExplanationsAndExamples(
+    synchronized public List<ExplanationAndExamples> getExplanationsAndExamples(
             @Nullable ProfileDTO profile,
-            @NotNull List<String> keys
+            @NotNull List<String> keys,
+            @NotNull List<ExplanationAndExamples> explanationsNaiveBayes
     ) {
         if(profile == null) {
             return List.of();
         }
-        AffinityEvaluator affinityEvaluator = new AffinityEvaluator(profile, data.getConfig(), this, false);
-
-        return keys.stream().map(affinityEvaluator::getExplanationsAndExamples).toList();
+        AffinityEvaluator affinityEvaluator = new AffinityEvaluator(profile, data.getConfig(), this, false, generateDetailedExplanations);
+        val dataSuggestions2 = DataSuggestions2.build(explanationsNaiveBayes);
+        return keys.stream().map(
+                fl -> affinityEvaluator.getExplanationsAndExamples(
+                        fl,
+                        dataSuggestions2.get(fl)
+                )
+        ).toList();
 
     }
 
@@ -377,7 +415,7 @@ public class AlgoSuggestions {
                 && (pf.geo_pref() == null || pf.geo_pref().isEmpty());
     }
 
-    public boolean existsInApprentissage(String grp) {
+    synchronized public boolean existsInApprentissage(String grp) {
         return apprentissage.contains(grp);
     }
 
@@ -388,7 +426,7 @@ public class AlgoSuggestions {
      * @param maxDistance the max distance
      * @return a list of pathes from nodes n with a distance less than maxDistance
      */
-    public List<Path> computePathesFrom(String n, int maxDistance) {
+     public List<Path> computePathesFrom(String n, int maxDistance) {
         return pathes.computeIfAbsent(
                 Pair.of(n,maxDistance),
                 z -> edgesKeys
@@ -399,33 +437,14 @@ public class AlgoSuggestions {
         );
     }
 
-    public boolean isRelatedToHealth(Set<String> nonZeroScores) {
-        return relatedToHealth.stream()
-                .anyMatch(nonZeroScores::contains);
-    }
-
-    public boolean isLas(String fl) {
-        return las.contains(fl);
-    }
-
-    public String getStats() {
-        return
-                "<br>\ndetails served since last boot: " + counter.get()
-                        + "<br>\nnodes in graph: " + edgesKeys.nodes().size()
-                + "<br>\nedges in graph: " + edgesKeys.size()
-                ;
-
-    }
-
-
     private final ConcurrentHashMap<String,Ville> villes = new ConcurrentHashMap<>();
     public Ville getVille(String nomVille) {
         return villes.computeIfAbsent(nomVille, z -> data.getVille(nomVille));
     }
 
 
-    private final ConcurrentHashMap<Pair<String,Integer>, Map<String, Integer>> formationsSimilaires = new ConcurrentHashMap<>();
-    public Map<String, Integer> getFormationsSimilaires(String fl, int i) {
+    private final ConcurrentHashMap<Pair<String,Integer>, Map<String, Long>> formationsSimilaires = new ConcurrentHashMap<>();
+    public Map<String, Long> getFormationsSimilaires(String fl, int i) {
         return formationsSimilaires.computeIfAbsent(Pair.of(fl, i), z -> data.getFormationsSimilaires(fl, i));
     }
 
@@ -439,14 +458,9 @@ public class AlgoSuggestions {
         return capacites.computeIfAbsent(fl, data::getCapacity);
     }
 
-    private final ConcurrentHashMap<Pair<String,String>, Integer> nbAdmis = new ConcurrentHashMap<>();
-    public Integer getNbAdmis(String grp, String tousBacsCodeMps) {
-        return nbAdmis.computeIfAbsent(Pair.of(grp, tousBacsCodeMps), z -> data.getNbAdmis(grp, tousBacsCodeMps));
-    }
-
-    private final ConcurrentHashMap<Pair<String,String>, Pair<String, Middle50>> statsBac = new ConcurrentHashMap<>();
-    public @Nullable Pair<String, Middle50> getStatsBac(String fl, String bac) {
-        return statsBac.computeIfAbsent(Pair.of(fl, bac), z -> data.getStatsBac(fl, bac));
+    private final ConcurrentHashMap<Pair<String,String>, @Nullable Integer> nbAdmis = new ConcurrentHashMap<>();
+    public @Nullable Integer getNbAdmis(String grp, String bac) {
+        return nbAdmis.computeIfAbsent(Pair.of(grp, bac), z -> data.getNbAdmis(grp, bac));
     }
 
     private final ConcurrentHashMap<String, @NotNull List<@NotNull Pair<@NotNull String, @NotNull LatLng>>> voeuxCoords = new ConcurrentHashMap<>();
@@ -459,9 +473,10 @@ public class AlgoSuggestions {
         return durees.computeIfAbsent(fl, z -> data.getDuree(fl));
     }
 
-    private final ConcurrentHashMap<String, @NotNull String> debugLabels = new ConcurrentHashMap<>();
+    @Getter
+    private final Map<String, @NotNull String> debugLabels = new ConcurrentHashMap<>();
     public String getDebugLabel(String key) {
-        return debugLabels.computeIfAbsent(key, z -> data.getDebugLabel(key));
+        return debugLabels.get(key);
     }
 
     private final ConcurrentHashMap<Pair<String,String>, Double> statsSpecialites = new ConcurrentHashMap<>();
@@ -480,4 +495,22 @@ public class AlgoSuggestions {
         return formationIds.computeIfAbsent( "", z->data.getFormationIds());
     }
 
+    private final ConcurrentHashMap<String, List<String>> voeuToFormationsIds = new ConcurrentHashMap<>();
+    public Map<String,List<String>> getFormationsConnectedToVoeux(List<String> voeux) {
+        val result = new HashMap<String,List<String>>();
+        voeux.forEach(v -> {
+            val formations = voeuToFormationsIds.computeIfAbsent(v, z -> data.getFormationsOfVoeu(v));
+            formations.forEach(s -> result.computeIfAbsent(s, z -> new ArrayList<>()).add(v));
+        });
+        return result;
+    }
+
+    public Config setParameters(@NotNull Config config) {
+        data.setConfig(config);
+        return data.getConfig();
+    }
+
+    public Config getConfig() {
+        return data.getConfig();
+    }
 }
